[package]
name = "rpinyin"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pinyin = { version = "0.10", default-features = false, features = ["plain", "with_tone"] }
wasm-bindgen = "0.2"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = 'z'
